# zk-proof-system

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  cobertura.xml  rustfmt.toml  setup-complete.ps1  tarpaulin-report.html
.github/workflows/: ci.yml
benchmark-results/: bench_2025-08-22_17-05-05.txt
bindings/: Cargo.toml  cbindgen.toml
bindings/src/: ffi.rs  lib.rs  wasm.rs
c-headers/: example.c  zk_proof.h
commitments/: Cargo.toml
commitments/src/: lib.rs  pedersen.rs  polynomial.rs  traits.rs
core/: Cargo.toml
core/benches/: core_benchmarks.rs
core/src/: circuit.rs  error.rs  lib.rs  proof.rs  recursion.rs  utils.rs
core/src/circuits/: dci.rs  dci_tests.rs  helpers.rs  mod.rs  pore.rs  tests.rs
scripts/: build-wasm.ps1  generate-c-headers.ps1  run-benchmarks.ps1  run-tests-coverage.ps1  setup-dev-tools.ps1
verifier/: Cargo.toml
verifier/src/: batch.rs  lib.rs  single.rs  traits.rs
wasm-artifacts/: test.html
