[package]
name = "zk-proof-commitments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zk-proof-core = { path = "../core" }
halo2_proofs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
pasta_curves = { workspace = true }
blake2b_simd = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[lib]
name = "zk_proof_commitments"
path = "src/lib.rs"
