[package]
name = "zk-proof-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zk-proof-core = { path = "../core" }
zk-proof-commitments = { path = "../commitments" }
halo2_proofs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
pasta_curves = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lib]
name = "zk_proof_verifier"
path = "src/lib.rs"
